# mlink

./: ARCHITECTURE.md  ARCHITECTURE_ISSUES.md  Cargo.toml  INSTALL.md  PITFALLS.md  README.md  README_CN.md  TEST_PLAN.md  TODO_DUAL_TRANSPORT.md  install.ps1  install.sh
.cargo/: config.toml
.claude/memory/: DECISIONS.md  DELIVERY_RULES.md  PROJECT_PROFILE.md  PROJECT_STATE.md  REAL_SCENARIOS.md  RISKS.md  TEAM_NOTES.md  TEST_CASES.md
.github/workflows/: release.yml
crates/mlink-cli/: Cargo.toml
crates/mlink-cli/src/: conn_tracker.rs  lib.rs  main.rs  node_build.rs  role.rs  run.rs
crates/mlink-cli/src/commands/: chat.rs  connect.rs  daemon.rs  dev.rs  doctor.rs  join.rs  listen.rs  mod.rs  ping.rs  room.rs  scan.rs  send.rs  serve.rs  status.rs  trust.rs
crates/mlink-cli/src/session/: dial.rs  listen.rs  mod.rs  scanner.rs  stdin.rs
crates/mlink-cli/src/util/: backoff.rs  mod.rs  open_url.rs  printing.rs
crates/mlink-cli/tests/: cli_tests.rs  conn_tracker_tests.rs  role_and_channels_tests.rs
crates/mlink-core/: Cargo.toml
crates/mlink-core/examples/: ble_connect_probe.rs  ble_scan_test.rs  two_nodes.rs
crates/mlink-core/src/: lib.rs
crates/mlink-core/src/api/: message.rs  mod.rs  pubsub.rs  rpc.rs  stream.rs
crates/mlink-core/src/core/: connection.rs  link.rs  mod.rs  node.rs  peer.rs  reconnect.rs  room.rs  scanner.rs  security.rs
crates/mlink-core/src/core/node/: connect.rs  io.rs  lifecycle.rs  mod.rs  rooms.rs  tests.rs  types.rs
crates/mlink-core/src/core/session/: io.rs  manager.rs  manager_tests.rs  mod.rs  reader.rs  types.rs
crates/mlink-core/src/protocol/: ack.rs  codec.rs  compress.rs  errors.rs  frame.rs  mod.rs  seq.rs  types.rs
crates/mlink-core/src/transport/: ble.rs  ipc.rs  mock.rs  mod.rs  peripheral.rs  tcp.rs  trait.rs
crates/mlink-core/tests/: link_tests.rs  phase1_tests.rs  phase2_tests.rs  phase3_tests.rs  phase4_tests.rs  phase5_tests.rs  phase6_tests.rs  phase8_tests.rs  phase9_tests.rs  session_manager_tests.rs  tcp_tests.rs
crates/mlink-daemon/: Cargo.toml
crates/mlink-daemon/src/: bootstrap.rs  discovery.rs  http.rs  lib.rs  lifecycle.rs  main.rs  protocol.rs  queue.rs  rooms.rs  session.rs  state.rs  subscription.rs
crates/mlink-daemon/src/discovery/: ble.rs  ble_ctl.rs  connect.rs  mod.rs  tcp.rs  tcp_ctl.rs
crates/mlink-daemon/src/session/: dispatch.rs  events.rs  handlers.rs  handlers_send.rs  lifecycle.rs  mod.rs  outbound.rs  transport_debug.rs  transport_forward.rs  transport_list.rs  transport_toggle.rs  validate.rs
crates/mlink-daemon/tests/: rooms_persist.rs  ws_protocol.rs  ws_ready.rs  ws_transport_debug.rs
docs/dual-transport-final/: DUAL-端联调手册.md  INTERFACE-CONTRACTS.md  MODULES.md  REGRESSION.md  TASK-LIST.md
docs/phase1/: DELIVERY.md
docs/phase10/: DELIVERY.md
docs/phase2/: DELIVERY.md
docs/phase3/: DELIVERY.md
docs/phase4/: DELIVERY.md
scripts/: bundle-macos.sh  install.sh  test_host.sh  test_join.sh
(+10 files in other folders)
