[package]
name = "mlink-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mlink"
path = "src/main.rs"

[dependencies]
mlink-core = { path = "../mlink-core" }
mlink-daemon = { path = "../mlink-daemon" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
